Test code complete and minor bug fixes
Signed-off-by: Jason Zelmanovich <Jzelmano@mail.yu.edu>